Add back compose statements

--- a/app/css/components/entrybox.css
+++ b/app/css/components/entrybox.css
@@ -4,10 +4,15 @@
 }
 
 .header {
+  composes: heading from '../common/typography';
+
   text-align: center;
 }
 
 .input {
+  composes: heading from '../common/typography';
+  composes: input from '../common/input';
+
   text-align: center;
   outline: none;
 }
