--- a/app/css/components/main-section.css
+++ b/app/css/components/main-section.css
@@ -1,14 +1,20 @@
+@value global-radius from '../settings.css';
+
 .main-section {
-    width: 50%;
+  composes: card from '../common/card';
+  width: 50%;
+  border-radius: global-radius;
 }
 
-.header {
+  .header {
+    composes: title from '../common/card';
+    composes: subheading from '../common/typography';
     background: #ed193a;
     color: #fff;
-}
+  }
 
-.list {
+  .list {
     list-style: none;
     padding: 16px;
-}
+  }
 
