--- a/app/css/components/scoreboard.css
+++ b/app/css/components/scoreboard.css
@@ -1,8 +1,13 @@
+@value font-medium from '../settings.css';
+
 .scoreboard {
+  composes: card from '../common/card';
   width: 40%;
 }
 
   .header {
+    composes: title from '../common/card';
+    composes: subheading from '../common/typography';
     background: #0F9D58;
     color: #fff;
   }
@@ -18,4 +23,6 @@
   }
 
   .topic {
+    composes: flexNotMoreThan200 from '../common/layout';
+    font-size: font-medium;
   }
