--- a/app/css/components/topic-item.css
+++ b/app/css/components/topic-item.css
@@ -1,5 +1,5 @@
-/*@value font-medium from '../settings.css';
-@value color-salem, color-dodger-blue, color-punch from '../common/colors.css';*/
+@value font-medium from '../settings.css';
+@value color-salem, color-dodger-blue, color-punch from '../common/colors.css';
 
 .topic-item {
   display: flex;
@@ -7,6 +7,7 @@
 }
 
 .topic {
+  composes: flexNotMoreThan200 from '../common/layout';
   font-size: font-medium;
 }
 
