--- a/app/css/main.css
+++ b/app/css/main.css
@@ -12,6 +12,8 @@ body {
 }
 
 .app {
+  composes: box from './common/layout.css';
+
   font-family: montserrat;
   font-weight: normal;
   font-smoothing: antialiased;
