--- a/app/css/components/login.less
+++ b/app/css/components/login.less
@@ -1,12 +1,14 @@
-@value global-radius, font-large, font-medium, font-small from '../settings';
-@value color-athens-gray, color-mercury, color-white, color-dodger-blue, color-crimson, color-bombay from '../common/colors.css';
+/*
+@value: global-radius, font-large, font-medium, font-small from '../settings';
+@value: color-athens-gray, color-mercury, color-white, color-dodger-blue, color-crimson, color-bombay from '../common/colors.css';
+*/
 
 .login {
   width: 420px;
   margin: 0 auto;
-  background-color: color-athens-gray;
+  /*background-color: color-athens-gray;
   border: 2px solid color-mercury;
-  border-radius: global-radius;
+  border-radius: global-radius;*/
 }
 
   .waiting {
@@ -16,15 +18,15 @@
   }
 
   .alternative {
-    background: color-white;
+    background: white;
     padding: 12px 8px;
 
-    font-size: font-medium;
+    //font-size: font-medium;
     text-align: center;
   }
 
   .alternative-link {
-    color: color-dodger-blue;
+    //color: color-dodger-blue;
     font-weight: bold;
 
     cursor: pointer;
@@ -38,7 +40,7 @@
 
   .email-container {
     padding: 16px 12px;
-    border-bottom: 2px solid color-mercury;
+    //border-bottom: 2px solid color-mercury;
   }
 
   .google-container {
@@ -48,26 +50,26 @@
   .header {}
 
   .heading {
-    composes: subheading from '../common/typography';
+    //composes: subheading from '../common/typography';
 
     padding: 16px 12px;
     text-align: center;
   }
 
   .input {
-    composes: input from '../common/input';
+    //composes: input from '../common/input';
   }
 
   .message {
-    color: color-crimson;
-    font-size: font-small;
+   /* color: color-crimson;
+    font-size: font-small;*/
   }
 
   .button {
-    composes: greenButton from '../common/button';
+    //composes: greenButton from '../common/button';
   }
 
   .hint {
-    composes: small from '../common/typography';
-    color: color-bombay;
+    //composes: small from '../common/typography';
+   // color: color-bombay;
   }
