--- a/app/css/components/login.less
+++ b/app/css/components/login.less
@@ -26,9 +26,8 @@
   }
 
   .alternative-link {
-    //color: color-dodger-blue;
+    color: green;
     font-weight: bold;
-
     cursor: pointer;
   }
 
